added some features

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,75 @@
+anyio
 asgiref
+canvas
+certifi
+charset-normalizer
+colorama
 crispy-bootstrap5
+distlib
+distro
 dj-database-url
 Django
 django-crispy-forms
+django-email
 django-environ
+docutils
+EasyProcess
+entrypoint2
+et-xmlfile
+exceptiongroup
+filelock
+h11
+httpcore
+httpx
+idna
+Kivy
+kivy-deps.angle
+kivy-deps.glew
+kivy-deps.gstreamer
+kivy-deps.sdl2
+Kivy-examples
+Kivy-Garden
+Library
+MouseInfo
+mss
+mysqlclient
+numpy
+openai
+opencv-python
+openpyxl
 pillow
+Pillow-PIL
+platformdirs
+playsound
 psycopg2
 psycopg2-binary
+PyAutoGUI
+pydantic
+pygame
+PyGetWindow
+Pygments
+PyMsgBox
+pyperclip
+pypiwin32
+PyRect
+pyscreenshot
+PyScreeze
 python-decouple
+pytube
+pytweening
+pywin32
+PyYAML
+requests
+scipy
+sketchpy
+sniffio
 sqlparse
+svg.path
+svgpathtools
+svgwrite
+tqdm
+turtle
 typing_extensions
 tzdata
+urllib3
+virtualenv
